tests/machine/x/fs/map_membership.fs
// Generated by Mochi compiler v0.10.28 on 2025-07-18T04:05:12Z
open System

let m: System.Collections.Generic.Dictionary<string,int> = System.Collections.Generic.Dictionary<string,int>(dict [("a", 1); ("b", 2)])
printfn "%b" (m.ContainsKey "a")
printfn "%b" (m.ContainsKey "c")
